k8s/categorization-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: categorization-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: categorization-service
  template:
    metadata:
      labels:
        app: categorization-service
    spec:
      containers:
        - name: categorization-service
          image: categorization-service:latest
          imagePullPolicy: Never
