k8s/ingestion-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingestion-service
spec:
  selector:
    app: ingestion-service
  ports:
    - port: 4002
      targetPort: 4002
