k8s/reporting-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reporting-service
spec:
  selector:
    app: reporting-service
  ports:
    - port: 4003
      targetPort: 4003
